Sign up form now submits info to the database. Form validation has been added to both the client and the server.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,6 +30,10 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Backlog Library</title>
   </head>
   <body>
